$Id$

2009-01-04  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* misc.py gdb.py gdbmi.py: Ignore gdb/mi log stream records.
	* simple.py: The symcompletion and sigint commands assert when run in
	simple.
	* netbeans.py application.py: Print an error message when a pyclewn
	command is issued on a [NoName] buffer. When the command is issued on
	a buffer loaded from Vim command line, prompt the user to allow the
	processing of netbeans messages in the Vim idle loop (this is required
	after the fix in Vim 7.2: netbeans events are handled while updating
	the screen, causing a crash)
	* netbeans.py: Fix incorrect display after the Vim command bdelete or
	bwipeout on the clewn console.
	* misc.py gdb.py netbeans.py application.py dispatcher.py: Use
	clewn.Error for exceptions and tidy up raise statements.
	* pyclewn_install.py __init__.py: The "gvim" name or full pathname can
	be set on pyclewn installation with the environment variable 'vimcmd'.
	* netbeans.py application.py: Load the clewn console after netbeans
	initialisation, to enable the first gdb command on the
	initial [NoName] buffer.
	* misc.py gdb.py misc_posix.py dispatcher.py: pyclewn falls back to
	using pipes when it cannot open a pseudo tty with gdb. Environment
	variables 'CLEWN_PIPES' and 'CLEWN_POPEN' can be used to force this
	behavior. Fix cmd_sigint help message and __doc__ when running with
	pipes.
	* misc.py misc_posix.py dispatcher.py : Fix cannot run two
	simultaneous pyclewn sessions on the same listening port.

===============================================================================
2008-08-12  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* netbeans.py : Fix identification of a clewn buffer when the current
	working directory includes spaces in its pathname.
	* gdb.py : Fix space in path names when using clewn mapped keys.
	* gdbmi.py : Fix Windows pathnames.
	* gdb.py : Fix AssertException on self.gotprompt when quitting. The